--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section .title::after{
 .navbar{
     position: fixed;
     width: 100%;
-    z-index: 999;
+    z-index: 500;
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
@@ -147,7 +147,7 @@ section .title::after{
     text-align: center;
     line-height: 45px;
     color: #fff;
-    z-index: 9999;
+    z-index: 500;
     font-size: 30px;
     border-radius: 6px;
     border-bottom-width: 2px;
@@ -449,6 +449,18 @@ section.skills .title::before{
 .teams .carousel .card:hover img{
     border-color: #fff;
 }
+
+.teams .carousel .card:hover img.animatedgif{
+    height: 250px;
+    object-fit: contain;
+}
+
+.teams .carousel .card img.animatedgif{
+    height: 250px;
+    object-fit: contain;
+}
+
+
 .owl-dots{
     text-align: center;
     margin-top: 20px;
@@ -630,7 +642,7 @@ footer span a:hover{
 @media (max-width: 947px){
     .menu-btn{
         display: block;
-        z-index: 999;
+        z-index: 500;
     }
     .menu-btn i.active:before{
         content: "\f00d";
@@ -1041,4 +1053,148 @@ section.blog .title::after {
     height: 40px;
     width: 40px;
 
+}
+
+
+/*light box*/
+/* Lightbox */
+.lightbox {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 501;
+    display: none;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    cursor: zoom-out;
+    padding: 30px;
+}
+
+.lightbox.open {
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.lightbox.open .lightbox-content {
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.lightbox.open .lightbox-content {
+    animation: lightboxImage .5s ease;
+    width: 75%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+@-webkit-keyframes lightboxImage {
+    0% {
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+        
+    } 100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes lightboxImage {
+    0% {
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+
+    } 100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+.lightbox .lightbox-content {
+    position: relative;
+}
+
+.lightbox .lightbox-content img {
+    height: auto;
+    width: auto;
+    max-width: 100%;
+    /* max-height: 500px; */
+    cursor: pointer;
+    display: block;
+    padding: 40px 0 30px; 
+} 
+
+.lightbox .lightbox-content .lightbox-close {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    top: 0;
+    right: 0px;
+    font-size: 32px;
+    text-align: right;
+    color: #ffffff;
+    line-height: 30px;
+    cursor: pointer;
+}
+
+.lightbox .lightbox-content .lightbox-caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: space-between;
+    justify-content: space-between;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: 400;
+    z-index: -1;
+}
+
+.lightbox .lightbox-controls .prev-item,
+.lightbox .lightbox-controls .next-item {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: #ffffff;
+    text-align: center;
+    border-radius: 50%;
+    cursor: pointer;
+    top: 50%;
+    margin-top: -20px;
+    z-index: 110;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.lightbox .lightbox-controls .prev-item:hover,
+.lightbox .lightbox-controls .next-item:hover {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.lightbox .lightbox-controls .prev-item:active,
+.lightbox .lightbox-controls .next-item:active {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
+.lightbox .lightbox-controls .prev-item {
+    left: 30px;
+}
+
+.lightbox .lightbox-controls .next-item {
+    right: 30px;
+}
+
+.lightbox .lightbox-controls .prev-item .fa,
+.lightbox .lightbox-controls .next-item .fa {
+    font-size: 32px;
+    line-height: 40px;
 }
